asteria/core/tests/errors/elaboration_errors/incorrect_kind_for_type_parameter.asteriacore
data F (a : Type);;

x : Test$F(\(a : Type) -> a)
  = x
  ;;
